# CacheBot

./: .ruff.toml  README.md  pyproject.toml
cachebot/: main.py
cachebot/clash/: __init__.py  clash.py
cachebot/cogs/: __init__.py  clash_cog.py  events_cog.py
